--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-.vercel
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.egg-info/
+dist/
+build/
+
+# Virtual environment
+.venv/
+venv/
+env/
+
+# Model weights (large binary files)
+*.pth
+
+# NLTK data
+nltk_data/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
+Thumbs.db
